# interview

./: .flake8  .gitignore  .pre-commit-config.yaml  INTERVIEW_GUIDE.md  README.md  check_types.sh  lint.sh  lint_fix.sh  pyproject.toml  test.sh  workflow_result.json
examples/: run_workflow.py
src/: __init__.py
src/llm/: llm__client.py  llm__mock.py
src/steps/: blog_post__step.py  email__step.py  format_publish__step.py  meta__step.py  quality_check__step.py  research__step.py  social_media__step.py  step__base.py
src/utils/: logger.py
src/workflow/: workflow__executor.py  workflow__executor__spec.py  workflow__state.py  workflow__types.py
